# smart-geyser

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  config.example.toml  docker-compose.yml  hacs.json  repository.json  smart-geyser-spec-v5_1.md  smart-geyser-system_1.canvas
.github/workflows/: ci.yml  release.yml
addon/: DOCS.md  config.yaml
crates/smart-geyser-core/: Cargo.toml  README.md
crates/smart-geyser-core/src/: decision_engine.rs  event_detector.rs  heat_calc.rs  lib.rs  models.rs  pattern_store.rs  provider.rs  pv_provider.rs  shared_state.rs  system.rs
crates/smart-geyser-core/tests/: decision_engine_integration.rs
crates/smart-geyser-providers/: Cargo.toml
crates/smart-geyser-providers/src/: geyserwala.rs  geyserwala_mqtt.rs  lib.rs
crates/smart-geyser-service/: Cargo.toml
crates/smart-geyser-service/src/: app_state.rs  config.rs  main.rs  scheduler.rs
crates/smart-geyser-service/src/api/: boost.rs  config.rs  engine_config.rs  events.rs  mod.rs  opportunity.rs  provider_config.rs  pv_state.rs  read_only.rs  status.rs
custom_components/smart_geyser/: __init__.py  api_client.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/smart_geyser/translations/: en.json
docker/: Dockerfile.dev  Dockerfile.ha-test  Dockerfile.prod
docs/hardware/: electric-only-no-pv.md  electric-sunsynk.md  solar-pumped-no-pv-battery.md
ha-integration/: pytest.ini  requirements-dev.txt
ha-integration/dashboards/: smart_geyser.yaml
ha-integration/tests/: conftest.py  test_api_client.py  test_coordinator.py
tasks/: README.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
