[workspace]
resolver = "2"
members = [
    "crates/smart-geyser-core",
    "crates/smart-geyser-providers",
    "crates/smart-geyser-service",
]

[workspace.package]
version = "1.0.3"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/svisagie/smart-geyser"

[workspace.dependencies]
# Async / runtime
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

# Serialisation / time
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Errors
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"

# Test utilities
pretty_assertions = "1"
rstest = "0.23"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# These pedantic lints are noisy in domain code where module/field names
# repeat for clarity (e.g. PVSystemState having pv_power_w). Allow them
# at the workspace level so individual files don't need scoped allows.
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
