[package]
name = "smart-geyser-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware-agnostic core logic for the smart-geyser controller: traits, domain models, and pure heat-calculation math."
keywords = ["geyser", "water-heater", "smart-home", "home-automation", "iot"]
categories = ["embedded", "science"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
