[package]
name = "smart-geyser-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "smart-geyser-service"
path = "src/main.rs"

[dependencies]
smart-geyser-core = { path = "../smart-geyser-core" }
smart-geyser-providers = { path = "../smart-geyser-providers" }

axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true, features = ["full"] }

serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum-test = "20"

[lints]
workspace = true
